chore: add types to package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "LICENSE",
     "README.md"
   ],
+  "types": "dist/index.d.ts",
   "main": "dist/index.mjs",
   "module": "dist/index.mjs",
   "exports": {
