chore: target esnext

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "baseUrl": "src",
     "declaration": true,
     "esModuleInterop": true,
+    "module": "esnext",
     "inlineSourceMap": false,
     "lib": ["esnext"],
+    "target": "esnext",
     "listEmittedFiles": false,
     "listFiles": false,
     "moduleResolution": "node",
